--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 [dependencies]
 rand = "0.7"
 raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
+specs = { version = "0.16.1", features = ["specs-derive"] }
