--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# dung_gen
 rand = "0.7"
+ena = "0.13.1"
 
 # graphics and input
 raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
