--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,9 @@ zerocopy = "0.3"
 wavefront_obj = "*"
 lazy_static = "1.4.0"
 
-# json stuff
+# ron stuff
+ron = "*"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
 
 # ECS
 specs = { version = "0.16.1", features = ["specs-derive"] }
