--- a/settings/display.settings
+++ b/settings/display.settings
@@ -1,7 +1,5 @@
-{
-    "fps": 60,
-    "screen_width": 1920,
-    "screen_height": 1080,
-    "tile_size": 32,
-    "max_tiles": 10.0
-}
+(
+    fps : 60,
+    screen_width  : 1920,
+    screen_height : 1080,
+)
