--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[profile.release]
-debug = true
+#[profile.release]
+#debug = true
 
 [dependencies]
 # dung_gen
@@ -25,9 +25,10 @@ zerocopy = "0.3"
 wavefront_obj = "*"
 lazy_static = "1.4.0"
 
-# ron stuff
+# loader
 ron = "*"
 serde = { version = "1.0", features = ["derive"] }
+notify = "4.0.15"
 
 # ECS
 specs = { version = "0.16.1", features = ["specs-derive"] }
