--- a/settings/paths.settings
+++ b/settings/paths.settings
@@ -1,6 +1,11 @@
 (
-  display_settings_path : "settings/display.settings",
-  assets_path           : "assets/",
-  entities_path         : "entities/",
-  shaders_path          : "shaders/",
+    // Settings
+    display_settings_path    : "settings/display.settings",
+    extensions_settings_path : "settings/extensions.settings",
+
+    // Resources
+    assets_path           : "assets/",
+    models_path           : "assets/Models/",
+    entities_path         : "entities/",
+    shaders_path          : "shaders/",
 )
