--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ edition = "2018"
 rand = "0.7"
 ena  = "0.13.1"
 
+# sound baby
+rg3d-sound = "0.11.0"
+
 # graphics and input
 cgmath        = "0.17"
 winit         = "0.22"
