Small changes, and getting ready for legion and imgui

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,11 @@ winit         = "0.22"
 futures       = "0.3"
 env_logger    = "0.7"
 glsl-to-spirv = "0.1"
-zerocopy = "0.3"
-lazy_static = "1.4.0"
-imgui = "0.3.0"
+zerocopy      = "0.3"
+lazy_static   = "1.4.0"
+imgui         = "0.4"
+imgui-wgpu    = "0.6.0"
+imgui-winit-support = { version = "0.4", default-features = false, features = ["winit-22"]}
 
 wavefront_obj = "*"
 gltf = "0.15.2"
@@ -39,3 +41,4 @@ notify = "4.0.15"
 
 # ECS
 specs = { version = "0.16.1", features = ["specs-derive"] }
+legion = "0.3.1"
