--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,8 @@ ena  = "0.13.1"
 rg3d-sound = "0.11.0"
 
 # graphics and input
-wgpu          = { git = "https://github.com/gfx-rs/wgpu-rs.git", branch = "master" }
+# wgpu          = { git = "https://github.com/gfx-rs/wgpu-rs.git", branch = "master" }
+wgpu          = "*"
 cgmath        = "0.17"
 winit         = "0.22"
 futures       = "0.3"
