--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ notify = "4.0.15"
 # ECS
 specs = { version = "0.16.1", features = ["specs-derive"] }
 legion = "0.3.1"
+crossbeam-channel = "*"
 
 # physics
 nalgebra = "0.20"
