nphysics integrated, almost working

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ authors = ["Arnaldur Bjarnason <aarnaldur@gmail.com>", "Jökull Reynisson <jokul
 edition = "2018"
 
 
-
 [dependencies]
 
 # misc
@@ -42,9 +41,9 @@ notify = "4.0.15"
 # ECS
 specs = { version = "0.16.1", features = ["specs-derive"] }
 legion = "0.3.1"
-crossbeam-channel = "*"
+crossbeam-channel = "0.4.4"
 
 # physics
-nalgebra = "0.20"
-ncollide2d = "0.22"
-nphysics2d = "0.14"
+nalgebra = "0.24.0"
+ncollide2d = "0.27.0"
+nphysics2d = "0.19.0"
