added some rustfmt rules by committee

--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,2 +1,5 @@
 fn_single_line = true
 use_field_init_shorthand = true
+imports_granularity = "Module"
+group_imports = "StdExternalCrate"
+merge_derives = false
