--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,27 +11,25 @@ opt-level = 2
 [dependencies]
 
 # misc
-itertools = "0.9"
+itertools = "0.10"
 
 # dung_gen
-rand = "0.7"
-ena  = "0.13.1"
-
-# sound baby
-rg3d-sound = "0.11.0"
+rand = "0.8.3"
+ena  = "0.14.0"
 
 # graphics and input
 # wgpu          = { git = "https://github.com/gfx-rs/wgpu-rs.git", branch = "master" }
-wgpu          = "0.5.0"
-cgmath        = "0.17"
-winit         = "0.22"
+wgpu          = "0.6"
+cgmath        = "0.18"
+winit         = "0.24"
 futures       = "0.3"
-env_logger    = "0.7"
-glsl-to-spirv = "0.1"
+env_logger    = "0.8.2"
+shaderc       = "0.7.1"
 zerocopy      = "0.3"
 lazy_static   = "1.4.0"
-imgui-wgpu    = "0.6.0"
-imgui-winit-support = { version = "0.4", default-features = false, features = ["winit-22"]}
+imgui         = "0.6"
+imgui-wgpu    = "0.12.0"
+imgui-winit-support = "0.6"
 
 wavefront_obj = "*"
 gltf = "0.15.2"
@@ -42,7 +40,6 @@ serde = { version = "1.0", features = ["derive"] }
 notify = "4.0.15"
 
 # ECS
-specs = { version = "0.16.1", features = ["specs-derive"] }
 legion = "0.3.1"
 crossbeam-channel = "0.4.4"
 
