--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ lto = false
 [dependencies]
 
 # misc
-itertools = "0.10"
+itertools = "0.10.0"
 
 # dung_gen
 rand = "0.8.3"
@@ -21,31 +21,31 @@ ena  = "0.14.0"
 
 # graphics and input
 # wgpu          = { git = "https://github.com/gfx-rs/wgpu-rs.git", branch = "master" }
-wgpu          = "0.7"
-cgmath        = "0.18"
-winit         = "0.24"
-futures       = "0.3"
-env_logger    = "0.8.2"
+wgpu          = "0.7.0"
+cgmath        = "0.18.0"
+winit         = "0.24.0"
+futures       = "0.3.13"
+env_logger    = "0.8.3"
 shaderc       = "0.7.1"
-zerocopy      = "0.3"
+zerocopy      = "0.3.0"
 lazy_static   = "1.4.0"
-imgui         = "0.7"
-imgui-wgpu    = "0.14"
-imgui-winit-support = "0.7"
+imgui         = "0.7.0"
+imgui-wgpu    = "0.14.0"
+imgui-winit-support = "0.7.0"
 
-wavefront_obj = "*"
+wavefront_obj = "9.0.0"
 gltf = "0.15.2"
 
 # loader
-ron = "*"
-serde = { version = "1.0", features = ["derive"] }
+ron = "0.6.4"
+serde = { version = "1.0.123", features = ["derive"] }
 notify = "4.0.15"
 
 # ECS
-legion = "0.3.1"
-crossbeam-channel = "0.4.4"
+legion = "0.4.0"
+crossbeam-channel = "0.5.0"
 
 # physics
-nalgebra = "0.24.0"
+nalgebra = "0.24.1"
 ncollide2d = "0.27.0"
 nphysics2d = "0.19.0"
