--- a/settings/paths.settings
+++ b/settings/paths.settings
@@ -5,6 +5,7 @@
 
     // Resources
     assets_path           : "assets/",
+    images_path           : "assets/",
     models_path           : "assets/Models/",
     entities_path         : "entities/",
     shaders_path          : "shaders/",
