--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ members = [
     "src/physics",
     "src/entity_smith",
     "src/transforms",
+    "src/world_gen",
+    "src/graphics",
+    "src/components"
 ]
 
 [dependencies]
@@ -24,31 +27,19 @@ physics = { path = "src/physics" }
 transforms = { path = "src/transforms" }
 entity-smith = { path = "src/entity_smith" }
 graphics = { path = "src/graphics" }
+world_gen = { path = "src/world_gen" }
+components = { path = "src/components" }
 
 # misc
 itertools = "0.10.0"
 rayon = "*"
-
-# dung_gen
-rand = "0.8.3"
-ena = "0.14.0"
-
-# graphics and input
-# wgpu          = { git = "https://github.com/gfx-rs/wgpu-rs.git", branch = "master" }
-#wgpu = "0.7.0"
-cgmath = "0.18.0"
-winit = "0.24.0"
 futures = "0.3.13"
-#shaderc = "0.7.1"
-#lazy_static = "1.4.0"
-#imgui = "0.7.0"
-#imgui-wgpu = "0.14.0"
-#imgui-winit-support = "0.7.0"
-#
-#bytemuck = { version = "1.5.1", features = ["derive"] }
-#
-#wavefront_obj = "9.0.0"
-#gltf = "0.15.2"
+winit = "0.24.0"
+
+# math
+cgmath = "0.18.0"
+rand = "0.8.3"
+
 
 # loader
 ron = "0.6.4"
