--- a/src/components/Cargo.toml
+++ b/src/components/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "physics"
+name = "components"
 version = "0.1.0"
 authors = ["Arnaldur Bjarnason <aarnaldur@gmail.com>", "Jökull Reynisson <jokullmani12@gmail.com>"]
 edition = "2018"
@@ -8,17 +8,5 @@ edition = "2018"
 
 [dependencies]
 
-# internal
-entity-smith = { path = "../entity_smith" }
-transforms = { path = "../transforms" }
-
-# physics
-nalgebra = "0.24.1"
-ncollide2d = "0.27.0"
-nphysics2d = "0.19.0"
-
-# ECS
-legion = "0.4"
-crossbeam-channel = "0.5.0"
-
+legion = "0.4.0"
 cgmath = "0.18.0"
