--- a/src/graphics/Cargo.toml
+++ b/src/graphics/Cargo.toml
@@ -10,9 +10,13 @@ edition = "2018"
 
 # internal
 entity-smith = { path = "../entity_smith" }
+transforms = { path = "../transforms"}
+components = { path = "../components"}
+input = { path = "../input"}
 
 # misc
 itertools = "0.10.0"
+legion = "0.4.0"
 
 # graphics and input
 wgpu = "0.7.0"
