--- a/src/assman/Cargo.toml
+++ b/src/assman/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "world_gen"
+name = "assman"
 version = "0.1.0"
 authors = ["Arnaldur Bjarnason <aarnaldur@gmail.com>", "Jökull Reynisson <jokullmani12@gmail.com>"]
 edition = "2018"
@@ -9,14 +9,16 @@ edition = "2018"
 [dependencies]
 
 # internal
-components = { path = "../components"}
-transforms = { path = "../transforms"}
 graphics = { path = "../graphics"}
+world_gen = { path = "../world_gen"}
 entity_smith = { path = "../entity_smith"}
-physics = { path = "../physics"}
 
-rand = "0.8.3"
-ena = "0.14.0"
+ron = "0.6.4"
+serde = { version = "1.0.123", features = ["derive"] }
+wavefront_obj = "9.0.0"
+itertools = "0.10.0"
+gltf = "0.15.2"
+shaderc = "0.7.2"
+wgpu = "0.7.0"
 cgmath = "0.18.0"
 legion = "0.4.0"
-itertools = "0.10.0"
