--- a/src/application/Cargo.toml
+++ b/src/application/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "physics"
+name = "application"
 version = "0.1.0"
 authors = ["Arnaldur Bjarnason <aarnaldur@gmail.com>", "Jökull Reynisson <jokullmani12@gmail.com>"]
 edition = "2018"
@@ -8,17 +8,15 @@ edition = "2018"
 
 [dependencies]
 
-# internal
+#internal
+graphics = { path = "../graphics" }
 entity_smith = { path = "../entity_smith" }
+physics = { path = "../physics" }
 transforms = { path = "../transforms" }
+input = { path = "../input" }
+systems = { path = "../systems" }
+world_gen = { path = "../world_gen" }
+assman = { path = "../assman" }
 
-# physics
-nalgebra = "0.24.1"
-ncollide2d = "0.27.0"
-nphysics2d = "0.19.0"
-
-# ECS
-legion = "0.4"
-crossbeam-channel = "0.5.0"
-
-cgmath = "0.18.0"
+legion = "0.4.0"
+winit = "0.24.0"
