New render pipeline is functional

--- a/settings/extensions.settings
+++ b/settings/extensions.settings
@@ -1,4 +1,5 @@
 (
     models : ["obj", "glb", "gltf"],
-    images : ["png", "jpg", "jpeg"],
+    textures : ["png", "jpg", "jpeg"],
+    shaders : ["vert", "frag"],
 )
