--- a/src/graphics/Cargo.toml
+++ b/src/graphics/Cargo.toml
@@ -17,6 +17,7 @@ input = { path = "../input" }
 # misc
 itertools = "0.10.0"
 legion = "0.4.0"
+slotmap = "1.0.2"
 
 # graphics and input
 wgpu = "0.7.0"
@@ -27,6 +28,8 @@ lazy_static = "1.4.0"
 imgui = "0.7.0"
 imgui-wgpu = "0.14.0"
 imgui-winit-support = "0.7.0"
+
+image = "0.23.14"
 
 bytemuck = { version = "1.5.1", features = ["derive"] }
 
