--- a/engine/application/Cargo.toml
+++ b/engine/application/Cargo.toml
@@ -17,9 +17,9 @@ input = { path = "../input" }
 systems = { path = "../systems" }
 world_gen = { path = "../world_gen" }
 assman = { path = "../assman" }
-misc = { path = "../misc" }
 
 winit = "0.24.0"
 legion = "0.4.0"
 apply = "0.3.0"
 enum-map = "1.0.0"
+itertools = "0.10.0"
