--- a/engine/misc/Cargo.toml
+++ b/engine/misc/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2018"
 # internal
 graphics = { path = "../graphics" }
 input = { path = "../input" }
+application = { path = "../application" }
 
 legion = "0.4.0"
 rand = "0.8.3"
