--- a/settings/paths.settings
+++ b/settings/paths.settings
@@ -5,8 +5,8 @@
 
     // Resources
     assets_path           : "assets/",
-    images_path           : "assets/",
     models_path           : "assets/Models/",
+    textures_path         : "assets/Textures",
+    shader_path          : "assets/Shaders",
     entities_path         : "entities/",
-    shaders_path          : "shaders/",
 )
