--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,3 +53,10 @@ serde = { version = "1.0.123", features = ["derive"] }
 # ECS
 legion = "0.4"
 crossbeam-channel = "0.5.0"
+
+# WFC
+image = "0.23.14"
+apply = "0.3.0"
+bit-set = "0.5.2"
+wfc_image = "0.11.0"
+
